# helsinki-gtfs

./: aggregate_trips_per_segment.sql  basic_querys.sql  export_to_postgres.py  hsl_vehicle_positions.parquet  pyproject.toml  realtime.py  riga_vehicle_positions.parquet  segment_speed_map.html  show_aggregate_trips.ipynb  show_aggregate_trips.py  split_routes.py  trip_speed_analysis.sql  visualize.ipynb  visualize.py  visualize_gpt.py  visualize_trajectories.sql  visualize_vehicle_positions.py
