[project]
name = "helsinki-gtfs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dash==3.1.1",
    "dash-bootstrap-components>=2.0.3",
    "duckdb>=1.3.2",
    "gtfs-realtime-bindings>=1.0.0",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "plotly>=6.2.0",
    "protobuf>=6.31.1",
    "psycopg>=3.2.9",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "geoalchemy2>=0.17.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "psycopg2-binary>=2.9.10",
    "geopandas>=1.1.1",
    "folium>=0.20.0",
    "branca>=0.8.1",
]
